<resources>
    <string name="app_name">Snapster</string>
    <string name="Login">Login</string>
    <string name="Signup">Signup</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="OrSignup">Or, Signup</string>
    <string name="OrLogin">Or, Login</string>
    <string name="Name">Name</string>
    <string name="Username">Username</string>
    <string name="Gender">Gender : </string>
    <string name="Bio">Bio</string>
    <string name="CompleteSignup">Complete Signup</string>
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_wall">Wall</string>
    <string name="title_search">Search</string>
    <string name="title_addImage">Add</string>
    <string name="title_myProfile">Profile</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="edit">Edit Profile</string>
    <string name="caption">Caption : </string>
    <string name="enterCaption">Enter caption</string>
    <string name="postImage">Post</string>
    <string name="profilePicture">Profile Picture</string>
    <string name="uploading">Uploading Image</string>
    <string name="like">Like</string>
    <string name="unlike">Unlike</string>
    <string name="likes">Likes</string>
    <string name="logout">Logout</string>
    <string name="loading">Loading...</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="update">Update Profile</string>
    <string name="searchForUsers">Search for Users</string>
    <string name="noPosts">No posts yet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
