<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignupActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/dp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/upload" />

        <TextView
            android:id="@+id/profileText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/profilePicture"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginBottom="20dp"
            android:layout_below="@id/dp"/>

        <EditText
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_below="@id/profileText"
            android:hint="@string/Name"/>

        <EditText
            android:id="@+id/usernameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_below="@id/nameText"
            android:hint="@string/Username"/>


        <EditText
            android:id="@+id/bioText"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:layout_below="@id/usernameText"
            android:hint="@string/Bio"
            android:inputType="textLongMessage"/>

        <Button
            android:id="@+id/updateProfileButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:layout_centerHorizontal="true"
            android:background="@drawable/buttonback"
            android:textColor="#ffffff"
            android:layout_below="@id/bioText"
            android:layout_marginTop="20dp" />

    </RelativeLayout>

</ScrollView>