<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignupActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/upload" />

        <TextView
            android:id="@+id/profileText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/profilePicture"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginBottom="20dp"
            android:layout_below="@id/profileImage"/>

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_below="@id/profileText"
            android:hint="@string/Name"/>

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_below="@id/nameEditText"
            android:hint="@string/Username"/>

        <LinearLayout
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/usernameEditText">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Gender"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:gravity="center_vertical"
                android:textSize="20sp"/>

            <Spinner
                android:id="@+id/genderSpinner"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:autofillHints="@string/Gender"/>

        </LinearLayout>


        <EditText
            android:id="@+id/bioEditText"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:layout_below="@id/gender"
            android:hint="@string/Bio"
            android:inputType="textLongMessage"/>

        <Button
            android:onClick="completeSignup"
            android:id="@+id/completeSignup"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/CompleteSignup"
            android:textColor="#ffffff"
            android:background="@drawable/buttonback"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/bioEditText"
            android:layout_marginTop="20dp" />

    </RelativeLayout>

</ScrollView>
