<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="56dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.github.ybq.android.spinkit.SpinKitView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/uploadProgressBar"
        style="@style/SpinKitView.Large.Wave"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@id/uploadImageView"
        app:SpinKit_Color="@color/colorAccent"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/uploadingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/uploading"
        android:layout_below="@id/uploadProgressBar"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/uploadImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxHeight="500dp"
        android:src="@drawable/upload"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/captionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/uploadImageView"
        android:text="@string/caption"
        android:textSize="20sp"
        android:padding="10dp"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/captionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="80dp"
        android:layout_below="@+id/captionText"
        android:hint="@string/enterCaption"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="bottom"
        android:inputType="textLongMessage"/>

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/captionEditText"
        android:textColor="#ffffff"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/buttonback"
        android:text="@string/postImage"/>

    </RelativeLayout>

</ScrollView>